--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@emotion/styled": "^11.10.8",
     "@mui/material": "^5.12.3",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
-    "react-icons": "^4.9.0",
-    "react-router-dom": "^6.11.2",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.1",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.2",
     "typewriter-effect": "^2.20.1"
