--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.12.3",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.5.0",
     "framer-motion": "^10.12.16",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
