--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "axios": "^1.4.0",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.5.0",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.13.1",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.7.2",
     "redux": "^4.2.1",
