--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jenkins-company",
   "private": true,
+  "homepage": "www.jenkins.ng",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
