--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@syncfusion/ej2-react-popups": "^19.4.52",
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "flowbite": "^1.7.0",
@@ -36,7 +38,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.10.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
