--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "jenkins-company",
   "private": true,
   "homepage": "https://www.jenkins.ng",
+  "keywords": [
+    "Tickets events market buy sell "
+  ],
   "version": "0.0.0",
   "type": "module",
   "scripts": {
