--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@coreui/react": "^5.0.0-alpha.0",
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/material": "^5.12.3",
@@ -32,6 +33,7 @@
     "@tanstack/react-query-devtools": "^4.33.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "caniuse-lite": "^1.0.30001546",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.5.0",
     "framer-motion": "^10.13.1",
